--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "core-js": "^3.29.0",
     "export-from-json": "^1.7.3",
     "file-saver": "^2.0.5",
-    "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
+    "vuex": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
