--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.6.5",
     "core-js": "^3.29.0",
     "export-from-json": "^1.7.3",
     "file-saver": "^2.0.5",
