--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.5",
     "core-js": "^3.29.0",
     "export-from-json": "^1.7.3",
+    "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "roboto-fontface": "*",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
