--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.29.0",
     "export-from-json": "^1.7.3",
     "express": "^4.18.2",
@@ -19,6 +21,7 @@
     "roboto-fontface": "*",
     "serve-static": "^1.15.0",
     "vue": "^3.2.0",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "vuex": "^4.1.0",
