--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "export-from-json": "^1.7.3",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "roboto-fontface": "*",
     "serve-static": "^1.15.0",
